--- a/css/style.css
+++ b/css/style.css
@@ -331,4 +331,84 @@ footer .attribution {
   margin-top: 3em;
   text-align: center;
 }
+
+@media (max-width: 800px) {
+  .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .row .img-area {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
+  .row .img-area {
+    margin: 0 auto;
+  }
+  .row .img-area img {
+    max-height: 300px;
+    width: auto;
+    margin: 0 auto;
+  }
+  .row .text-area {
+    text-align: center;
+  }
+  header .intro .text-area input, header .intro .text-area button {
+    display: block;
+    width: 100%;
+  }
+  header .intro .text-area button {
+    margin-left: 0;
+    margin-top: 1em;
+  }
+  section .text-area p {
+    text-align: start;
+  }
+  section .text-area a, section .text-area .card {
+    margin: 1em auto;
+  }
+  section .text-area .card .img-area {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    margin: 0;
+  }
+  section .text-area .card .quote {
+    position: relative;
+    top: 0;
+    left: -48%;
+  }
+  aside {
+    text-align: center;
+  }
+  aside .d-flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  aside .d-flex form input, aside .d-flex form button {
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
+  aside .d-flex form button {
+    min-width: auto;
+    max-width: none;
+  }
+  footer .col {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 3em;
+  }
+  footer .col .col-4 {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+}
 /*# sourceMappingURL=style.css.map */
